--- a/src/components/Offer/Offer.module.css
+++ b/src/components/Offer/Offer.module.css
@@ -5,10 +5,10 @@
   @apply flex-1 flex flex-col justify-center items-center text-center gap-8 p-6;
 }
 .offer_title {
-  @apply text-white text-4xl font-bold xl:text-6xl text-secondary-100;
+  @apply text-white text-4xl font-bold xl:text-6xl;
 }
 .offer_hero_title {
-  @apply text-white xl:text-xl text-secondary-100;
+  @apply text-white xl:text-xl;
 }
 .hero_img {
   @apply flex-1 w-full relative md:h-full;
